fixed scrollbar border issue in select

--- a/src/css/components/_forms.css
+++ b/src/css/components/_forms.css
@@ -22,6 +22,7 @@
 
 select,
 select.form-control {
+  --scrollbar-width: 7px;
   padding-right: 28px;
   background-image: var(--select-icon);
   background-size: 18px;
